[docs] CONTRIBUTING: review fixes (Java 25, CI dispatch, handler reference, test disabling, TOC, dashes)