@@ -28,11 +28,6 @@ Thank you for considering contributing to this project! We welcome all contribut
   - [File Organization](#file-organization)
   - [Macros](#macros)
 - [Module READMEs](#module-readmes)
-  - [Structure](#structure)
-  - [Writing Style](#writing-style)
-  - [Avoid](#avoid)
-  - [Runnable Modules](#runnable-modules)
-  - [Self-Review Checklist](#self-review-checklist)
 - [Optimization](#optimization)
   - [Performance](#performance)
   - [Zero-Cost Type Design](#zero-cost-type-design)
@@ -40,11 +35,17 @@ Thank you for considering contributing to this project! We welcome all contribut
 - [Testing](#testing)
   - [Deterministic Tests](#deterministic-tests)
   - [Framework](#framework)
-  - [Base Trait Hierarchy](#base-trait-hierarchy)
   - [Test Patterns by Level](#test-patterns-by-level)
-  - [Platform-Conditional Tests](#platform-conditional-tests)
+  - [Assertion Model](#assertion-model)
   - [Compile-Time Tests](#compile-time-tests)
   - [Concurrent Test Helpers](#concurrent-test-helpers)
+  - [Debugging Hangs and Timeouts](#debugging-hangs-and-timeouts)
+  - [Exception and Failure Assertions](#exception-and-failure-assertions)
+  - [Skipping and Preconditions](#skipping-and-preconditions)
+  - [Disabling and Focusing Tests](#disabling-and-focusing-tests)
+  - [Platform-Conditional Tests](#platform-conditional-tests)
+  - [Decorators](#decorators)
+  - [Per-Suite Configuration](#per-suite-configuration)
 - [Unsafe Boundary](#unsafe-boundary)
   - [The Two-Tier API Pattern](#the-two-tier-api-pattern)
   - [Unsafe API Conventions](#unsafe-api-conventions)
@@ -67,7 +68,7 @@ Thank you for considering contributing to this project! We welcome all contribut
 
 Before you begin, make sure you have the following installed:
 
-- **Java 21 (or later)**
+- **Java 25 (or later)**: the build refuses to load on an older JDK
 - **Scala**
 - **Node** (Node 24+ to run the experimental WASM target: it defaults to V8's Turboshaft Wasm pipeline)
 - **sbt** (Scala Build Tool)
@@ -91,32 +92,26 @@ Before you begin, make sure you have the following installed:
 
 ### Configuring Java Options
 
-Java options (`JAVA_OPTS` and `JVM_OPTS`) define how much memory and resources the JVM should use when running the project. Setting these options correctly ensures stable performance and prevents out-of-memory errors.
+The sbt JVM is configured by the checked-in `.jvmopts`, so no environment setup is needed. The sbt launcher appends `.jvmopts` after `JAVA_OPTS`, so a flag set in both takes the `.jvmopts` value, and an `-Xmx` in `JAVA_OPTS` has no effect.
 
-To configure Java options, run the following commands in your terminal:
-```sh
-export JAVA_OPTS="-Xms3G -Xmx4G -Xss10M -XX:MaxMetaspaceSize=512M -XX:ReservedCodeCacheSize=128M -Dfile.encoding=UTF-8"
-export JVM_OPTS="-Xms3G -Xmx4G -Xss10M -XX:MaxMetaspaceSize=512M -XX:ReservedCodeCacheSize=128M -Dfile.encoding=UTF-8"
-```
+#### Explanation of Parameters
 
-#### Explanation of Parameters:
-
-- `-Xms2G`: Sets the initial heap size to 3GB.
-- `-Xmx3G`: Sets the maximum heap size to 4GB.
-- `-Xss10M`: Sets the stack size to 10MB.
-- `-XX:MaxMetaspaceSize=512M`: Limits the maximum metaspace size to 512MB.
-- `-XX:ReservedCodeCacheSize=128M`: Reserves 128MB for compiled code caching.
-- `-Dfile.encoding=UTF-8`: Ensures file encoding is set to UTF-8.
+- `-Xmx12G`: maximum heap of 12GB.
+- `-Xss10M`: thread stack size of 10MB.
+- `-XX:+UseG1GC`: the G1 garbage collector.
+- `-XX:+UseCompactObjectHeaders`: compact object headers (a JDK 25 flag).
+- `-XX:MaxMetaspaceSize=2G`: metaspace capped at 2GB.
+- `-XX:ReservedCodeCacheSize=256M`: 256MB reserved for compiled code.
+- `-Dfile.encoding=UTF-8`: UTF-8 file encoding.
 
 #### Adjusting These Values
 
-If you experience memory issues or your system has more resources, you can increase these values. For example, if you have 16GB RAM, you might set:
+To change the heap for one run, pass it on the command line, which the launcher places after `.jvmopts`:
 ```sh
-export JAVA_OPTS="-Xms4G -Xmx8G -Xss10M -XX:MaxMetaspaceSize=1G -XX:ReservedCodeCacheSize=256M -Dfile.encoding=UTF-8"
-export JVM_OPTS="-Xms4G -Xmx8G -Xss10M -XX:MaxMetaspaceSize=1G -XX:ReservedCodeCacheSize=256M -Dfile.encoding=UTF-8"
+sbt -J-Xmx8G 'kyo-coreJVM/test'
 ```
 
-You can also add these lines to your `.bashrc` or `.zshrc` file for persistent settings.
+`JAVA_OPTS` still carries flags that `.jvmopts` does not set, such as `-Xms`.
 
 ### How to Build Locally
 
@@ -182,18 +177,19 @@ sbt '+kyoJS/test'  # Runs JS tests
 sbt '+kyoNative/Test/compile' # Compiles Native code
 ```
 
-Check formatting before submitting:
+Format before submitting. A bare `scalafmtAll` or `scalafmtCheckAll` reaches only the JVM projects, so name all four platform aggregates, as CI does:
 ```sh
-sbt "scalafmtCheckAll"
+sbt kyoJVM/scalafmtAll kyoJS/scalafmtAll kyoNative/scalafmtAll kyoWasm/scalafmtAll scalafmtSbt
 ```
+CI runs this command and fails if it leaves a diff.
 
 ### Running CI in Your Fork
 
-Pull requests to the main repository currently require maintainer approval before CI runs, so checks may not start right away. To get full CI signal on your own schedule, run the same workflows in your fork. They use only GitHub-hosted runners that are free for public repositories and read no repository secrets, so they run unmodified.
+Pull requests to the main repository require maintainer approval before CI runs, so checks may not start right away. To get full CI signal on your own schedule, run the same workflows in your fork. They use only GitHub-hosted runners that are free for public repositories and read no repository secrets, so they run unmodified.
 
 1. **Enable Actions on your fork.** GitHub disables a fork's workflows by default. Open your fork's **Actions** tab (`https://github.com/<your-user>/<your-fork>/actions`) and enable them when prompted.
 
-2. **Run the `ci` workflow.** In the **Actions** tab, select **ci** and click **Run workflow**, then choose your branch. Set **oses** to `linux-x64 linux-arm64` to match what pull-request CI runs. Leave **mode** as `full` for a complete run, or set it to `diff` to test only the modules your branch changed. The Windows pole is not part of PR CI; add `windows-x64` to **oses** to include it.
+2. **Run the `ci-dispatch` workflow.** The `ci` workflow runs only on pushes and pull requests to `main`; the manually runnable one is `ci-dispatch` (`.github/workflows/ci-dispatch.yml`). In the **Actions** tab, select **ci-dispatch** and click **Run workflow**, then choose your branch. Pull-request CI runs four os poles: `linux-x64` and `linux-arm64` with JVM, JS, Native and Wasm, and `windows-x64` and `windows-arm64` with JVM and JS. The **oses** default omits `windows-arm64`; set it to `linux-x64 linux-arm64 windows-x64 windows-arm64` to match pull-request CI. Leave **mode** as `full` for a complete run, or set it to `diff` to test only the modules your branch changed, which is what pull-request CI runs.
 
 3. **Or open a fork-internal pull request.** A PR from your working branch against your fork's own `main` triggers the same diff-mode run an upstream PR would, on your runners, with no approval needed. It also runs `release-probe`, a no-secrets publishability check, for free.
 
@@ -242,19 +238,19 @@ We encourage contributors to leverage Large Language Models (LLMs) responsibly:
 
 These are the axioms. Everything else in this guide derives from them.
 
-1. **Source files are documentation.** Every `.scala` file is meant to be read top-to-bottom. Method ordering, scaladocs, section separators, and the flow from public API down to internals all serve readability. A contributor opening a file for the first time should understand the type's purpose and usage patterns just by reading the file — before touching any external docs. Treat the ordering and structure of a file as carefully as you treat the implementation.
+1. **Source files are documentation.** Every `.scala` file is meant to be read top-to-bottom. Method ordering, scaladocs, section separators, and the flow from public API down to internals all serve readability. A contributor opening a file for the first time should understand the type's purpose and usage patterns by reading the file, before touching any external docs. Treat the ordering and structure of a file as carefully as you treat the implementation.
 
 2. **Most-used first.** Within each section, prioritize what users reach for most. Factory methods before configuration, `run` before `runWith`, simple overloads before complex ones. Discoverability beats alphabetical order.
 
 3. **Action verbs, not theory.** `foreach` not `traverse`. Accessible naming lowers the barrier to entry and keeps the API approachable for developers who don't have category theory backgrounds.
 
-4. **Performance is a first-class feature.** Avoid allocations, avoid unnecessary suspensions, use `inline` and opaque types where appropriate. Zero-cost abstractions aren't optional — they're the reason Kyo can be both safe and fast.
+4. **Performance is a first-class feature.** Avoid allocations, avoid unnecessary suspensions, use `inline` and opaque types where appropriate. Zero-cost abstractions aren't optional: they're the reason Kyo can be both safe and fast.
 
 5. **Composition over inheritance.** Delegate, don't extend. No `protected`, no deep hierarchies. Build complex behavior by combining simple pieces.
 
-6. **Type safety first, escape hatches as last resort.** Write type-safe code by default. `asInstanceOf` and `@unchecked` are acceptable only when they're strictly necessary inside opaque type boundaries or kernel internals where the type system can't express a known invariant — never as a convenience shortcut. Never use `@uncheckedVariance`. `Frame`, `Tag`, and `AllowUnsafe` guard the public surface where users interact.
+6. **Type safety first, escape hatches as last resort.** Write type-safe code by default. `asInstanceOf` and `@unchecked` are acceptable only when they're strictly necessary inside opaque type boundaries or kernel internals where the type system can't express a known invariant, never as a convenience shortcut. Never use `@uncheckedVariance`. `Frame`, `Tag`, and `AllowUnsafe` guard the public surface where users interact.
 
-7. **Symmetry across related types.** Paired or complementary types should share the same structural patterns (factory methods, config, lifecycle) and naming conventions. Keep names consistent — if one type uses `close`, the paired type should too. When users learn one side, the other should feel familiar.
+7. **Symmetry across related types.** Paired or complementary types should share the same structural patterns (factory methods, config, lifecycle) and naming conventions. Keep names consistent: if one type uses `close`, the paired type should too. When users learn one side, the other should feel familiar.
 
 8. **Explain the surprising, skip the obvious.** A comment on a race condition is essential. A comment on `get` returning a value is noise.
 
@@ -280,40 +276,40 @@ These are the axioms. Everything else in this guide derives from them.
 
 Effect operations follow consistent naming:
 - **`run`** eliminates an effect: `Abort.run`, `Var.run`, `Emit.run`, `Choice.run`, `Env.run`. Common handler variants beyond `run`:
-  - `runWith(v)(continue)` — canonical handler with continuation
-  - `runTuple` — returns `(State, A)` tuple
-  - `runDiscard` — discards emitted/intermediate values
-  - `runFirst` — handles only the first occurrence
-  - `runPartial` / `runPartialOrThrow` — handles a subset of a union error type
+  - `runWith(v)(continue)`: canonical handler with continuation
+  - `runTuple`: returns `(State, A)` tuple
+  - `runDiscard`: discards emitted/intermediate values
+  - `runFirst`: handles only the first occurrence
+  - `runPartial` / `runPartialOrThrow`: handles a subset of a union error type
   Non-`run` eliminators have specific semantics beyond elimination:
-  - `recover` / `recoverError` — recovers from errors with a fallback value
-  - `catching` — catches exceptions and converts to effect errors
-  - `fold` / `foldError` — maps all result cases (success/failure) to a single return type
+  - `recover` / `recoverError`: recovers from errors with a fallback value
+  - `catching`: catches exceptions and converts to effect errors
+  - `fold` / `foldError`: maps all result cases (success/failure) to a single return type
 - **`get`** extracts a value from a container type, lifting the error case into the effect. `Abort.get(either)` extracts the `Right` value, lifting `Left` into `Abort`. `Abort.get(maybe)` extracts `Present`, lifting `Absent` into `Abort`. For context effects, `get` demands the current value: `Env.get[R]: R < Env[R]`, `Var.get[V]: V < Var[V]`.
 - **`use`** applies a function to the gotten value: `Env.use[R](f: R => A < S)`, `Var.use[V](f: V => A < S)`.
-- **`init`** / **`initWith`** / **`use`** / **`initUnscoped`** / **`initUnscopedWith`** — resource factory variants with increasing lifecycle control:
-  - `init` — creates a `Scope`-managed resource (default choice)
-  - `initWith(f)` — creates a `Scope`-managed resource and applies `f` to it
-  - `use(f)` — bracket semantics without `Scope` in the effect set
-  - `initUnscoped` — no cleanup guarantees, caller manages lifecycle
-  - `initUnscopedWith(f)` — no cleanup + applies `f`
+- **`init`** / **`initWith`** / **`use`** / **`initUnscoped`** / **`initUnscopedWith`**: resource factory variants with increasing lifecycle control:
+  - `init`: creates a `Scope`-managed resource (default choice)
+  - `initWith(f)`: creates a `Scope`-managed resource and applies `f` to it
+  - `use(f)`: bracket semantics without `Scope` in the effect set
+  - `initUnscoped`: no cleanup guarantees, caller manages lifecycle
+  - `initUnscopedWith(f)`: no cleanup, applies `f`
 
-  See "Resource Factory Convention" in the Unsafe Boundary section for the full delegation chain.
+  See [Closeable Resource Pattern](#closeable-resource-pattern) for the full delegation chain.
 - **`fooPure`** suffix for pure (non-effectful) variants: `mapPure`, `filterPure`, `collectPure`, `contramapPure`. The pure version avoids suspension overhead. Used consistently across `Stream`, `Pipe`, and `Sink`.
 - **`fooDiscard`** drops the return value: `offer` returns `Boolean`, `offerDiscard` returns `Unit`. Same for `complete`/`completeDiscard`, `interrupt`/`interruptDiscard`, etc.
-- **Sync-try vs async-wait** — sync-try operations use names that imply attempt (`offer`, `poll`) and return a success indicator (`Boolean`, `Maybe`). Async-wait operations use names that imply completion (`put`, `take`) and suspend until done. The async version tries the sync version first and only suspends on failure.
+- **Sync-try vs async-wait**: sync-try operations use names that imply attempt (`offer`, `poll`) and return a success indicator (`Boolean`, `Maybe`). Async-wait operations use names that imply completion (`put`, `take`) and suspend until done. The async version tries the sync version first and only suspends on failure.
 - **`noop`** / **`Noop`** for degenerate cases (formally, the identity implementation): `Latch(0)` returns a pre-completed noop, `Meter.Noop` is a no-op meter that passes through without rate-limiting. This is both an optimization (avoids allocating real state when nothing will happen) and a naming convention for when you need an identity/pass-through implementation of a type.
 
 ### Types
 
 When a Kyo primitive exists for a concept, use it instead of the stdlib equivalent.
 
-**kyo-data** — foundational value types:
+**kyo-data**, foundational value types:
 
 | Kyo primitive  | Replaces                                                   | Notes                                                                                                                                                                                            |
 | -------------- | ---------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | `Maybe[A]`     | `Option[A]`                                                | `Option` only as conversion input (e.g., `Abort.get(opt: Option[A])`). When stdlib methods return `Option` (e.g., `collectFirst`), convert to `Maybe` as soon as possible via `Maybe.fromOption` |
-| `Result[E, A]` | `Either`, `Try`                                            | Three-way: `Success`/`Failure`/`Panic` — never raw `Either` or `Try` in effect signatures                                                                                                        |
+| `Result[E, A]` | `Either`, `Try`                                            | Three-way: `Success`/`Failure`/`Panic`; never raw `Either` or `Try` in effect signatures                                                                                                        |
 | `Chunk[A]`     | `Seq`, `List`, `Vector`                                    | Use internally; accept generic collections in public APIs (see below)                                                                                                                            |
 | `Duration`     | `java.time.Duration`, `scala.concurrent.duration.Duration` | Opaque `Long`-based, zero-allocation                                                                                                                                                             |
 | `ByteSize`     | a bare `Long` or `Int` holding a byte count                | Opaque `Long`-based, zero-allocation, saturating arithmetic, non-negative by construction                                                                                                        |
@@ -326,7 +322,7 @@ Prefer `ByteSize` over a bare numeric type wherever a value means "a quantity of
 
 This is guidance for new and changed code. Existing APIs that thread byte counts as `Long` are not required to migrate, and a migration should be its own change rather than a drive-by edit inside an unrelated one.
 
-**kyo-prelude** — effects:
+**kyo-prelude**, effects:
 
 | Kyo primitive | Purpose              | Notes                                                               |
 | ------------- | -------------------- | ------------------------------------------------------------------- |
@@ -336,11 +332,11 @@ This is guidance for new and changed code. Existing APIs that thread byte counts
 | `Emit[V]`     | Value emission       | Push-based output; use `Emit.value`, `Emit.run`                     |
 | `Poll[V]`     | Value polling        | Pull-based input; use `Poll.one`, `Poll.run`                        |
 | `Choice`      | Nondeterminism       | Multiple values; use `Choice.eval`, `Choice.run`                    |
-| `Check`       | Assertion checking   | Lightweight validation; use `Check.apply`, `Check.run`              |
+| `Check`       | Assertion checking   | Lightweight validation; use `Check.require`, `Check.runAbort`       |
 | `Batch`       | Automatic batching   | Groups operations for batch execution                               |
 | `Memo`        | Memoization          | Caches results; opaque alias for `Var[Memo.Cache]`                  |
 
-**kyo-prelude** — streaming and composition:
+**kyo-prelude**, streaming and composition:
 
 | Kyo primitive   | Purpose                  | Notes                                                             |
 | --------------- | ------------------------ | ----------------------------------------------------------------- |
@@ -349,7 +345,7 @@ This is guidance for new and changed code. Existing APIs that thread byte counts
 | `Sink[V, A, S]` | Stream consumption       | Composable `Stream[V] => A`                                       |
 | `Layer[Out, S]` | Dependency injection     | Composable; use `Layer.init` for compile-time wiring              |
 
-**kyo-core** — effects:
+**kyo-core**, effects:
 
 | Kyo primitive | Purpose                | Notes                                                                  |
 | ------------- | ---------------------- | ---------------------------------------------------------------------- |
@@ -362,7 +358,7 @@ This is guidance for new and changed code. Existing APIs that thread byte counts
 | `Random`      | Random generation      | Seeded or context-bound; use for testability                           |
 | `Retry`       | Retry with policy      | Takes a `Schedule` from kyo-data                                       |
 
-**kyo-core** — concurrency primitives:
+**kyo-core**, concurrency primitives:
 
 | Kyo primitive                                              | Purpose                  | Notes                                                                               |
 | ---------------------------------------------------------- | ------------------------ | ----------------------------------------------------------------------------------- |
@@ -373,18 +369,17 @@ This is guidance for new and changed code. Existing APIs that thread byte counts
 | `Signal[A]`                                                | Reactive value           | Current + change notification; use for observable state                             |
 | `AtomicInt`, `AtomicLong`, `AtomicBoolean`, `AtomicRef[A]` | Atomic operations        | Thread-safe single-value containers                                                 |
 | `LongAdder`                                                | High-contention counter  | Use over `AtomicLong` for write-heavy workloads                                     |
-| `Meter`                                                    | Concurrency control      | Semaphore, mutex, rate limiter — composable via `pipeline`                          |
+| `Meter`                                                    | Concurrency control      | Semaphore, mutex, rate limiter; composable via `pipeline`                           |
 | `Latch`                                                    | One-shot barrier         | Use for coordination points                                                         |
-| `Barrier`                                                  | Reusable barrier         | Use for phased coordination                                                         |
 
-**kyo-core** — error types:
+**Error types** (`Closed` is in kyo-kernel, the rest in kyo-core):
 
-| Kyo primitive | Purpose             | Notes                                                            |
-| ------------- | ------------------- | ---------------------------------------------------------------- |
-| `Closed`      | Resource closed     | Standard error for closeable resources; carries creation `Frame` |
-| `Timeout`     | Operation timed out | Used by `Async.timeout` and related APIs                         |
-| `Interrupted` | Fiber interrupted   | Used for cancellation; extends `Panic` semantics                 |
-| `Rejected`    | Admission rejected  | Load shedding signal from `Admission`                            |
+| Kyo primitive | Purpose             | Notes                                                                        |
+| ------------- | ------------------- | ---------------------------------------------------------------------------- |
+| `Closed`      | Resource closed     | Standard error for closeable resources; carries creation `Frame`             |
+| `Timeout`     | Operation timed out | Used by `Async.timeout` and related APIs                                     |
+| `Interrupted` | Fiber interrupted   | A `KyoException`; an interrupted fiber completes with it as a `Panic`        |
+| `Rejected`    | Admission rejected  | Load shedding signal from `Admission`                                        |
 
 **kyo-system** (file system, OS processes, and environment):
 
@@ -401,7 +396,7 @@ Accept generic collections in public APIs, use `Chunk` internally:
 ```scala
 def foreach[CC[+X] <: Iterable[X] & IterableOps[X, CC, CC[X]], A, B, S](
     source: CC[A]
-)(f: Safepoint ?=> A => B < S)(using Frame, Safepoint): CC[B] < S =
+)(f: A => B < S)(using Frame): CC[B] < S =
     Kyo.foreach(Chunk.from(source))(f).map(source.iterableFactory.from(_))
 ```
 
@@ -460,12 +455,12 @@ Pattern: `[UserSpecified](using Frame)[InferredFromArgs]`
 
 #### `using` Clause Ordering
 
-Inline methods — `Tag` before `Frame`:
+Inline methods put `Tag` before `Frame`:
 ```scala
 inline def get[V](using inline tag: Tag[Var[V]], inline frame: Frame): V < Var[V]
 ```
 
-Non-inline methods — `Frame` before type-level evidence:
+Non-inline methods put `Frame` before type-level evidence:
 ```scala
 def run[E](...)(using frame: Frame, ct: ConcreteTag[E], reduce: Reducible[Abort[ER]]): ...
 ```
@@ -478,7 +473,7 @@ def init(parallelism: Int)(using frame: Frame, allow: AllowUnsafe): ...
 #### Frame and Tag
 
 - **`Frame`** on every method that suspends or handles effects. Never on pure data accessors (`capacity`, `size`). Always `inline` on inline methods for zero-cost source location capture.
-- **`Tag`** when runtime effect dispatch is needed — parametric effects like `Var[V]`, `Emit[V]`, `Env[R]` require tags because the handler must identify which effect to match at runtime.
+- **`Tag`** when runtime effect dispatch is needed. Parametric effects like `Var[V]`, `Emit[V]`, `Env[R]` require tags because the handler must identify which effect to match at runtime.
 
 #### `@targetName` for Extension Methods
 
@@ -486,15 +481,15 @@ Use `@targetName` to disambiguate extension methods on opaque types that erase t
 
 #### Overload Organization
 
-Simple variants delegate to the canonical implementation — never duplicate logic:
+Simple variants delegate to the canonical implementation and never duplicate logic:
 
 ```scala
-// Canonical — does the actual work
+// Canonical: does the actual work
 private[kyo] inline def runWith[V, A, S, B, S2](state: V)(v: A < (Var[V] & S))(
     inline f: (V, A) => B < S2
-): B < (S & S2) = ArrowEffect.handleLoop(...)
+): B < (S & S2) = ArrowEffect.handleLoopState(...)
 
-// Variants — project the result differently
+// Variants: project the result differently
 def run[V, A, S](state: V)(v: A < (Var[V] & S)): A < S =
     runWith(state)(v)((_, result) => result)
 
@@ -516,37 +511,37 @@ Ordered by increasing arity/complexity within each group.
 
 ### Pending Type (`A < S`)
 
-`A < S` represents a computation that produces an `A` with pending effects `S`. Kyo automatically lifts plain values into computations — any `A` can be used where `A < S` is expected, with no wrapping needed. Use `Kyo.lift` only when the compiler struggles with type inference.
+`A < S` represents a computation that produces an `A` with pending effects `S`. Kyo automatically lifts plain values into computations: any `A` can be used where `A < S` is expected, with no wrapping needed. Use `Kyo.lift` only when the compiler struggles with type inference.
 
-- Avoid nested computations (`(A < S1) < S2`) — they require `.flatten` and make code harder to follow. Use `.map` chains or for-comprehensions to keep computations flat. `Kyo.lift` exists to wrap a value as a nested computation when unavoidable, but needing it usually signals the code should be restructured.
-- Use `.map`, not `.flatMap` — identical on pending types; `flatMap` exists for for-comprehensions only
+- Avoid nested computations (`(A < S1) < S2`). They require `.flatten` and make code harder to follow. Use `.map` chains or for-comprehensions to keep computations flat. `Kyo.lift` exists to wrap a value as a nested computation when unavoidable, but needing it usually signals the code should be restructured.
+- Use `.map`, not `.flatMap`. They are identical on pending types; `flatMap` exists for for-comprehensions only
 - Use `.andThen(next)` to sequence, not `.map(_ => next)`
 - Use `.unit` to discard a result to `Unit < S`
-- Prefer `.map` chains over for-comprehensions — use for-comprehensions when readability benefits (many dependent steps)
+- Prefer `.map` chains over for-comprehensions; use for-comprehensions when readability benefits (many dependent steps)
 - Use `.handle(Abort.run, Env.run(x))` for left-to-right handler pipelines instead of nested calls
 - Prefer `Abort.recover` over `Abort.run` + `Result` pattern matching
 
 ### Scala Conventions
 
-- **Prefer functional style** — no mutable `var`s, no `while` loops, no `throw`/`catch` for control flow. Use `val`, recursion (with `@tailrec`), `Loop`, and `Abort` for errors. Mutable state is acceptable only in performance-critical internals (atomics, bit-packing) where it's encapsulated behind a pure interface.
+- **Prefer functional style**: no mutable `var`s, no `while` loops, no `throw`/`catch` for control flow. Use `val`, recursion (with `@tailrec`), `Loop`, and `Abort` for errors. Mutable state is acceptable only in performance-critical internals (atomics, bit-packing) where it's encapsulated behind a pure interface.
 - Use `discard(expr)` to suppress unused value warnings, not `val _ = expr`
-- Provide `CanEqual` for all comparable types — use `derives CanEqual` on case classes and enums. Skip types with non-comparable fields like functions.
-- Minimize explicit type parameters at call sites — APIs should infer well from value arguments. If a user must write `Abort.fail[String]("error")` instead of `Abort.fail("error")`, that's a design smell. Use the `(using Frame)` type parameter separator pattern (see [Method Signatures](#method-signatures)) when user-specified types are unavoidable
-- Explicit return types on public API only — let the compiler infer elsewhere:
+- Provide `CanEqual` for all comparable types: use `derives CanEqual` on case classes and enums. Skip types with non-comparable fields like functions.
+- Minimize explicit type parameters at call sites. APIs should infer well from value arguments. If a user must write `Abort.fail[String]("error")` instead of `Abort.fail("error")`, that's a design smell. Use the `(using Frame)` type parameter separator pattern (see [Method Signatures](#method-signatures)) when user-specified types are unavoidable
+- Explicit return types on public API only; let the compiler infer elsewhere:
   ```scala
-  def offer(v: A)(using Frame): Boolean < (Sync & Abort[Closed])   // public — explicit
-  private def helper(v: A) = ...                                    // private — inferred
-  val result = someCall()                                           // val — inferred
+  def offer(v: A)(using Frame): Boolean < (Sync & Abort[Closed])   // public: explicit
+  private def helper(v: A) = ...                                    // private: inferred
+  val result = someCall()                                           // val: inferred
   val chunk = Chunk.from(values)                                    // not Chunk.from[A](values)
   ```
-- No `protected` — use `private[kyo]` or `private[kernel]`
-- All public APIs in the `kyo` package — internal code uses `kyo.internal`
-- Avoid `asInstanceOf` and `@unchecked` — acceptable only inside opaque type boundaries or kernel internals. Never use `@uncheckedVariance`
+- No `protected`; use `private[kyo]` or `private[kernel]`
+- All public APIs in the `kyo` package; internal code uses `kyo.internal`
+- Avoid `asInstanceOf` and `@unchecked`. They are acceptable only inside opaque type boundaries or kernel internals. Never use `@uncheckedVariance`
 - Imports: specific over wildcard, internal wildcards OK, grouped by origin
 - Keep `S` open if appropriate: use `A < (S & SomeEffect)` instead of `A < SomeEffect`
-- Prefer call-by-name (`body: => A < S`) for methods that capture a side-effecting body. This is a safety net in case the user forgets to suspend side effects — without call-by-name, `Abort.catching(connection.read())` would execute `read()` eagerly before `catching` can intercept the exception
+- Prefer call-by-name (`body: => A < S`) for methods that capture a side-effecting body. This is a safety net in case the user forgets to suspend side effects: without call-by-name, `Abort.catching(connection.read())` would execute `read()` eagerly before `catching` can intercept the exception
 - Mark methods `final` in abstract classes/traits when not intended for override
-- Run `sbt "scalafmtCheckAll"` before submitting
+- Format all four platforms before submitting (see [How to Build Locally](#how-to-build-locally))
 
 ### Documentation
 
@@ -554,18 +549,18 @@ Ordered by increasing arity/complexity within each group.
 
 Every main public type needs a scaladoc (8-35 lines) covering:
 
-- Opening sentence — what the type *is*, brief and definitional
-- Conceptual "why" — 1-3 paragraphs on mental model and design rationale
-- Feature/capability bullets — key operations and behaviors
-- Gotcha callouts — `WARNING:`, `IMPORTANT:`, or `Note:` for surprising behavior
+- Opening sentence: what the type *is*, brief and definitional
+- Conceptual "why": 1-3 paragraphs on mental model and design rationale
+- Behavior a caller must know that the signatures do not carry. Name key operations only as navigation (which entry point to reach for), never a description of what each method does; that belongs on the method (see [Method-Level Scaladoc](#method-level-scaladoc))
+- Gotcha callouts: `WARNING:`, `IMPORTANT:`, or `Note:` for surprising behavior
 - `@tparam` tags for all type parameters
-- `@see` references — 3-6 links per type, grouped by topic (creation, handling, related types)
+- `@see` references: 3-6 links per type, grouped by topic (creation, handling, related types)
 - No code examples unless demonstrating composition patterns or system property syntax (rare)
 
 WARNING/IMPORTANT/Note decision:
-- **`WARNING:`** — risk of data loss, memory exhaustion, or incorrect behavior if misused
-- **`IMPORTANT:`** — subtle semantic distinction that affects correctness
-- **`Note:`** — behavioral clarification or platform difference
+- **`WARNING:`**: risk of data loss, memory exhaustion, or incorrect behavior if misused
+- **`IMPORTANT:`**: subtle semantic distinction that affects correctness
+- **`Note:`**: behavioral clarification or platform difference
 
 #### Method-Level Scaladoc
 
@@ -583,7 +578,7 @@ Heading levels map to CSS classes that determine visual size:
 |--------------|------|------|
 | `#` / `##`   | h1 / h2 | very large (page-level) |
 | `###`        | h3 | large |
-| `####`       | h4 | moderate — **use for in-class sub-sections** |
+| `####`       | h4 | moderate; **use for in-class sub-sections** |
 | `#####` / `######` | h5 / h6 | small |
 
 Use `####` for sub-sections inside a class/object/trait docstring. `#` and `##` compete visually with the type's own title. For light visual grouping where no anchor or sidebar entry is wanted, use `**bold**` inline labels instead of a heading.
@@ -596,7 +591,7 @@ val x: Int < Async = 42
 ```
 ````
 
-Scala 2 `{{{ }}}` blocks render correctly (backward-compat) but get no syntax highlight; prefer fenced form for new code. **Indented (4-space) code blocks do not work** — they render as plain paragraphs.
+Scala 2 `{{{ }}}` blocks render correctly (backward-compat) but get no syntax highlight; prefer fenced form for new code. **Indented (4-space) code blocks do not work**: they render as plain paragraphs.
 
 Links:
 
@@ -608,9 +603,9 @@ Emphasis: `**bold**` and `*italic*`. Never `'''bold'''` / `''italic''`.
 
 Other supported markdown: GFM tables (`| col |`), block quotes (`>`), horizontal rules (`---` / `***`), ordered/unordered lists with nesting, strikethrough (`~~`), inline HTML (`<em>`, `<sub>`, etc.).
 
-Scaladoc tags (`@param`, `@tparam`, `@return`, `@throws`, `@note`, `@see`, `@example`, `@since`) render in a structured "Attributes" section below the description. For `@throws`, always use a resolvable type name (e.g. `@throws java.lang.IllegalArgumentException`) — bare type-parameter names like `@throws E` emit unresolvable-link warnings.
+Scaladoc tags (`@param`, `@tparam`, `@return`, `@throws`, `@note`, `@see`, `@example`, `@since`) render in a structured "Attributes" section below the description. For `@throws`, always use a resolvable type name (e.g. `@throws java.lang.IllegalArgumentException`); bare type-parameter names like `@throws E` emit unresolvable-link warnings.
 
-**scalafmt interaction (critical)**: the repo `.scalafmt.conf` sets `docstrings.wrap = keep` so scalafmt preserves docstring line structure. Even with that setting, markdown still requires blank `* ` lines between blocks — heading + paragraph, paragraph + list, paragraph + code block all need a blank separator line. Otherwise markdown joins them into a single paragraph.
+**scalafmt interaction (critical)**: the repo `.scalafmt.conf` sets `docstrings.wrap = keep` so scalafmt preserves docstring line structure. Even with that setting, markdown still requires blank `* ` lines between blocks: heading + paragraph, paragraph + list, paragraph + code block all need a blank separator line. Otherwise markdown joins them into a single paragraph.
 
 Example of correct structure:
 
@@ -650,7 +645,7 @@ A comment is warranted only as an answer to one of these:
 6. **Bit-packing and encoding schemes**: diagram the layout.
 7. **Phase markers in multi-step methods**: one line per phase naming the phase (`// extract path params`, `// map errors`), never restating a call. `// process completed transfers` above `processCompletedTransfers()` is noise.
 8. **Navigational signposts in large methods (30+ lines)** with non-linear control flow, so a reader can skim the structure.
-9. **Required markers**: `// Unsafe:` at a bridging site, and the audit comments individual modules require at a declared exception.
+9. **Required markers**: `// Unsafe:` at a bridging site, `// deviation: <reason>` at a test that keeps an unavoidable real-clock bound (see [Deterministic Tests](#deterministic-tests)), and the audit comments individual modules require at a declared exception.
 
 **Placement.** Categories 7 and 8 live only inside a method body. Never put a navigational or phase comment on a top-level declaration, a build setting, a field, or an import block: those have no structure to navigate.
 
@@ -666,7 +661,7 @@ A comment is warranted only as an answer to one of these:
 
 ### File Organization
 
-A source file should read like a guided tour of the type. A contributor opening it for the first time learns — in order — what the type is, how to create it, how to use it, and only then how it works internally. Scaladocs set the context, method ordering tells the story, and section separators mark the chapters.
+A source file should read like a guided tour of the type. A contributor opening it for the first time learns, in order, what the type is, how to create it, how to use it, and only then how it works internally. Scaladocs set the context, method ordering tells the story, and section separators mark the chapters.
 
 #### One Project per Class Name
 
@@ -731,16 +726,16 @@ end MyEffect
 
 The file template above reflects a deliberate top-to-bottom reading order:
 
-1. **Type definition + scaladoc** — the reader learns what the type is and why it exists
-2. **Public API** — organized into groups by usage pattern, most-used first within each group:
+1. **Type definition + scaladoc**: the reader learns what the type is and why it exists
+2. **Public API**: organized into groups by usage pattern, most-used first within each group:
    1. Suspend/create methods
    2. Query/access methods
    3. Handler methods
    4. Factory methods (for resource types)
-3. **Nested types** — `Unsafe`, `Config`, auxiliary case classes, public type aliases
-4. **Internal methods** — implementation details, `private[kyo]` helpers, internal-only givens
+3. **Nested types**: `Unsafe`, `Config`, auxiliary case classes, public type aliases
+4. **Internal methods**: implementation details, `private[kyo]` helpers, internal-only givens
 
-Within each group, simple overloads come before complex ones. The canonical implementation sits next to its variants so the reader sees the delegation at a glance. Scaladocs on each method flow naturally from one to the next — each building on context established by the previous.
+Within each group, simple overloads come before complex ones. The canonical implementation sits next to its variants so the reader sees the delegation at a glance. Scaladocs on each method flow from one to the next, each building on context established by the previous.
 
 This ordering matters because it determines how quickly a contributor can orient themselves. A well-ordered file answers "what does this do?" and "how do I use it?" without scrolling.
 
@@ -774,11 +769,11 @@ Group by semantic category (reads → writes → updates → handlers), then by 
 When a nested type is heavily used, promote it to package level with `export`:
 
 ```scala
-// In Fiber.scala — after the companion object
+// In Fiber.scala, after the companion object
 export Fiber.Promise   // makes kyo.Promise available without Fiber. prefix
 ```
 
-Use sparingly — only for types that users reference frequently enough that qualification would be noisy.
+Use sparingly, only for types that users reference frequently enough that qualification would be noisy.
 
 ### Macros
 
@@ -796,7 +791,7 @@ To check a macro answers the same in both modes:
 KYO_RETAIN_TREES=true sbt 'kyo-dataJVM/test'
 ```
 
-The flag is never set in CI. Retaining the trees of every dependency costs a few hundred MB per module (measured at +18% peak live heap on kyo-data's test compile), which the runners do not have to spare, so this is a local check to run when touching a macro that inspects types.
+The flag is never set in CI. Retaining the trees of every dependency costs a few hundred MB per module, which the runners do not have to spare, so this is a local check to run when touching a macro that inspects types.
 
 ---
 
@@ -814,20 +809,20 @@ To add or revise a module README, use the [`/readme` skill](.claude/skills/readm
 
 ### Performance
 
-- Prefer `final class` for concrete types and `abstract class` over `trait` for base types — JVM interface dispatch is more expensive than class dispatch. Use `trait` only when defining a pure interface (like effect types extending `ArrowEffect`/`ContextEffect`)
+- Prefer `final class` for concrete types and `abstract class` over `trait` for base types: JVM interface dispatch is more expensive than class dispatch. Use `trait` only when defining a pure interface (like effect types extending `ArrowEffect`/`ContextEffect`)
 - Mark classes `final` unless `sealed` or `abstract`
 - Provide pure-function variants (`mapPure`, `filterPure`) when a hot transformation doesn't need suspension
-- Fast-path before slow-path — always check for degenerate cases (empty, single-element, already-resolved) before entering the general/expensive path:
+- Fast-path before slow-path: always check for degenerate cases (empty, single-element, already-resolved) before entering the general/expensive path:
   ```scala
   if source.isEmpty then Chunk.empty              // empty: return immediately
   else if source.sizeIs == 1 then
       f(source.head).map(Chunk(_))                // single: avoid Loop setup
   else Loop.indexed(...)                           // general case
   ```
-- Use opaque types — never wrap when you can alias. See [Zero-Cost Type Design](#zero-cost-type-design)
-- Use `inline` strategically — inline creation paths, not handling paths. See [Inline Guidelines](#inline-guidelines)
-- Prefer `@tailrec` loops — allocate continuations only when effects force suspension
-- **Never block a thread** — use `Async`-based suspension (`Channel.put`, `Fiber.get`, `Clock.sleep`) instead of blocking primitives (`Thread.sleep`, `CountDownLatch.await`, `synchronized`, `Future.await`). 
+- Use opaque types; never wrap when you can alias. See [Zero-Cost Type Design](#zero-cost-type-design)
+- Use `inline` strategically: inline creation paths, not handling paths. See [Inline Guidelines](#inline-guidelines)
+- Prefer `@tailrec` loops; allocate continuations only when effects force suspension
+- **Never block a thread**: use `Async`-based suspension (`Channel.put`, `Fiber.get`, `Clock.sleep`) instead of blocking primitives (`Thread.sleep`, `CountDownLatch.await`, `synchronized`, `Future.await`).
 - Prefer lock-free algorithms (CAS + `@tailrec`) over blocking synchronization
 - Bit-pack atomically-updated composite state to avoid wrapper allocations. Always include a layout comment:
   ```scala
@@ -836,9 +831,9 @@ To add or revise a module README, use the [`/readme` skill](.claude/skills/readm
   // Bit 16 (1 bit): hasInterceptor flag
   // Bits 17-63 (47 bits): threadId
   ```
-- Avoid the erased tag pattern — existing usages are tech debt from when `Tag` had limitations with variant effects. `Tag` no longer has this limitation, so do not introduce new instances:
+- Avoid the erased tag pattern. `Tag` handles variant effects, so existing usages are tech debt; do not introduce new instances:
   ```scala
-  // tech debt — do not copy
+  // tech debt: do not copy
   private inline def erasedTag[E]: Tag[Abort[E]] = Tag[Abort[Any]].asInstanceOf[Tag[Abort[E]]]
   ```
 
@@ -860,17 +855,17 @@ Kyo achieves zero-cost abstractions through opaque types. When designing a new t
 
 **Structuring an opaque type:**
 - Define the opaque type and its companion in the same file
-- Expose the safe API via **extension methods** in the companion — not methods on a class
+- Expose the safe API via **extension methods** in the companion, not methods on a class
 - Factory methods in the companion validate input: `Maybe(null)` returns `Absent`, `Duration.fromNanos` clamps negatives
 - Internal code accesses the underlying value via pattern matching on union members or direct use within the opaque boundary
 - Avoid exposing the underlying representation; if escape hatches are needed, use `private[kyo]`
 - Code inside the type's own scope cannot summon a `Tag` for the type or derive one mentioning its underlying type; it passes `Tag.derive[X]` explicitly. See [Tags inside an opaque type's scope](#tags-inside-an-opaque-types-scope)
 
-**Given instances for new types** — provide as applicable:
-- `CanEqual` — required if the type supports `==`/`!=` (strict equality is enabled project-wide)
-- `Render` — for human-readable display
-- `Ordering` — if the type is naturally sortable
-- `Tag` — automatically derived; never declare a `given Tag[X]` inside `X`'s own scope (below)
+**Given instances for new types**, as applicable:
+- `CanEqual`: required if the type supports `==`/`!=` (strict equality is enabled project-wide)
+- `Render`: for human-readable display
+- `Ordering`: if the type is naturally sortable
+- `Tag`: automatically derived; never declare a `given Tag[X]` inside `X`'s own scope (below)
 
 #### Tags inside an opaque type's scope
 
@@ -896,26 +891,23 @@ Refusal is per site, so a type like `opaque type Count = Int` refuses every `Int
 
 ### Inline Guidelines
 
-`inline` is powerful but creates code bloat when overused. The codebase follows a deliberate strategy: **inline the creation path (where effects are born), not the handling path (where effects are processed), and inline function parameters to avoid closure allocation**.
+`inline` creates code bloat when overused. The codebase follows a deliberate strategy: **inline the creation path (where effects are born), not the handling path (where effects are processed), and inline function parameters to avoid closure allocation**.
 
 **IMPORTANT: Inline as little as possible.** When a method needs `inline`, mark only the function/by-name parameters as `inline` and keep the method body small. This eliminates closure allocation while minimizing code bloat at each call site. Two patterns:
 
-1. **Trivial body** — the method body is a one-liner, so inlining the whole thing is fine:
+1. **Trivial body**: the method body is a one-liner, so inlining the whole thing is fine:
    ```scala
-   // Maybe.map — body is a simple branch, no bloat risk
+   // Maybe.map: body is a simple branch, no bloat risk
    inline def map[B](inline f: A => B): Maybe[B] =
        if isEmpty then Absent else f(get)
    ```
 
-2. **Non-trivial body** — define a local non-inline `def` for the real logic. The `inline` method eliminates the lambda allocation for `f`, but the loop/recursion compiles as a regular method that doesn't duplicate at every call site:
+2. **Non-trivial body**: define a local non-inline `def` for the real logic and call it once. The `inline` method removes the lambda allocation for `f`, whose body lands inside the local method, and the loop or recursion stays a method call instead of expanding into the caller's control flow. A schematic shape (`Pending.map` follows it; its kernel internals are covered in [kyo-kernel's guide](kyo-kernel/CONTRIBUTING.md)):
    ```scala
-   // Pending.map — inline entry point, non-inline loop
-   inline def map[B, S2](inline f: Safepoint ?=> A => B < S2)(...): B < (S & S2) =
-       @nowarn("msg=anonymous") def mapLoop(v: A < S)(using Safepoint): B < (S & S2) =
-           v match
-               case kyo: KyoSuspend[...] => ...  // recursive loop logic
-               case v => f(v.unsafeGet)
-       mapLoop(v)
+   inline def map[B, S2](inline f: A => B < S2)(using inline frame: Frame): B < (S & S2) =
+       @nowarn("msg=anonymous") def loop(v: A < S): B < (S & S2) =
+           ... // suspension handling, recursing into loop, applying f to a value
+       loop(self)
    ```
 
 When in doubt, don't inline. The cost of unnecessary inlining (code bloat, slower compilation) is higher than the cost of a method call on a non-hot path.
@@ -924,10 +916,10 @@ When in doubt, don't inline. The cost of unnecessary inlining (code bloat, slowe
 
 | Category                                 | Examples                                                    | Why                                                                                          |
 | ---------------------------------------- | ----------------------------------------------------------- | -------------------------------------------------------------------------------------------- |
-| Effect suspend/create calls              | `Abort.fail`, `Var.set`, `Emit.value`, `Choice.evalSeq`     | Direct calls to `ArrowEffect.suspend`/`suspendWith` — must be zero-cost                      |
-| Kernel framework entry points            | `ArrowEffect.handle`, `ArrowEffect.suspend`                 | Backbone of the effect system; enables compile-time specialization                           |
+| Effect suspend/create calls              | `Abort.fail`, `Var.set`, `Emit.value`, `Choice.evalSeq`     | Direct calls to `ArrowEffect.suspend`/`suspendWith`; must be zero-cost                       |
+| Kernel framework entry points            | `ArrowEffect.handleLoop`, `ArrowEffect.suspend`             | Backbone of the effect system; enables compile-time specialization                           |
 | `private[kyo]` hot-path helpers          | `Var.runWith`, internal handler implementations             | Optimizes internal glue without affecting public API size                                    |
-| Methods with function/by-name parameters | `Maybe.map`, `Maybe.flatMap`, `Var.use`, `Result.fold`      | Eliminates `Function1` allocation — the lambda body is substituted directly at the call site |
+| Methods with function/by-name parameters | `Maybe.map`, `Maybe.flatMap`, `Var.use`, `Result.fold`      | Eliminates `Function1` allocation: the lambda body is substituted directly at the call site  |
 
 **DO NOT inline:**
 
@@ -936,15 +928,16 @@ When in doubt, don't inline. The cost of unnecessary inlining (code bloat, slowe
 | Public effect handlers/runners          | `Abort.run`, `Var.run`, `Emit.runFold`, `Choice.run`       | These call back into the kernel; inlining would duplicate complex handler logic at every call site   |
 | Methods that take only value parameters | `Maybe.get`, `Maybe.zip`, `Maybe.contains`, `Maybe.toList` | No function/by-name parameters means no closure to eliminate, so inlining adds bloat without benefit |
 
-**The pattern in practice** — look at any effect like `Abort`:
+**The pattern in practice**, in an effect like `Abort`:
 - `Abort.fail`, `Abort.panic`, `Abort.get`, `Abort.when` → **inline** (creation)
-- `Abort.run`, `Abort.runWith`, `Abort.recover`, `Abort.fold` → **not inline** (handling)
+- `Abort.run`, `Abort.recover`, `Abort.fold` → **not inline** (handling)
+- `Abort.runWith` → **inline**: a handler, but it takes a continuation, so the function-parameter rule applies
 
 Similarly for data types like `Maybe`:
 - `Maybe.map`, `Maybe.flatMap`, `Maybe.filter`, `Maybe.getOrElse` → **inline** (simple branches)
 - `Maybe.get`, `Maybe.zip`, `Maybe.contains`, `Maybe.flatten` → **not inline** (complex logic)
 
-**`@nowarn` for inlined lambdas** — when inlining a function parameter causes the compiler to warn about new anonymous classes, use `@nowarn("msg=anonymous")`.
+**`@nowarn` for inlined lambdas**: when inlining a function parameter causes the compiler to warn about new anonymous classes, use `@nowarn("msg=anonymous")`.
 
 ---
 
@@ -975,7 +968,7 @@ Clock.withTimeControl { control =>
 }
 ```
 
-**Barriers, not sleeps**, to make one fiber wait for another: `Latch` (one-shot), `Barrier` (phased), `Channel`/`Fiber.get` (rendezvous), or an `AtomicInt` plus a latch for "wait until N arrived". A negative property ("X must NOT have happened yet") is proven by a barrier the other fiber would have had to pass, never by sleeping and checking.
+**Barriers, not sleeps**, to make one fiber wait for another: `Latch` (a one-shot countdown: `Latch.init(n)` opens after `n` releases, which also covers "wait until N arrived"), or `Channel`/`Fiber.get` (rendezvous). A negative property ("X must NOT have happened yet") is proven by a barrier the other fiber would have had to pass, never by sleeping and checking.
 
 Common conversions:
 
@@ -1002,7 +995,11 @@ Checklist before adding a timing-touching test: does the assertion depend on rea
 
 ### Framework
 
-Test suites extend `kyo.test.Test[Any]` (or a module-derived base that extends it). The type parameter is an additive extra effect row; `Any` is the common case (baseline `Async & Abort[Any] & Scope` only). There are no per-module `Test.scala` shim files. Test files are named `FooTest.scala` and mirror the main source structure.
+Test suites extend `kyo.test.Test[Any]`, directly or through a module base that extends it. The type parameter is an additive extra effect row; `Any` is the common case (baseline `Async & Abort[Any] & Scope` only). Test files are named `FooTest.scala` and mirror the main source structure.
+
+A module base exists only when the module's suites share configuration or a fixture (a tighter `timeout`, an `aroundLeaf`, a helper). It lives in the module's test sources, as a `Test.scala` in the module's package or as a named base such as `ParseTestBase`, and extends `kyo.test.Test[Any]`.
+
+A project runs on kyo-test when its build definition calls `.withKyoTest`. The projects kyo-test itself runs on cannot: kyo-kernel and the modules under it, and kyo-test's own suites, test on ScalaTest, as do sbt plugins. kyo-kernel is the one to know, since its suites assert on the scheduler state kyo-test would run them on (see [kyo-kernel's guide](kyo-kernel/CONTRIBUTING.md#the-base-and-why-it-is-not-kyo-test)). Everything else in this section describes kyo-test.
 
 ```scala
 class ChannelTest extends kyo.test.Test[Any]:
@@ -1091,7 +1088,7 @@ The string passed to `typeCheckFailure` is a substring match against the compile
 "counter reaches 1" in {
     for
         counter <- AtomicInt.init(0)
-        _       <- Async.run(counter.incrementAndGet.unit)
+        _       <- Fiber.init(counter.incrementAndGet.unit)
         _       <- assertEventually(counter.get.map(_ > 0))
     yield ()
 }
@@ -1138,14 +1135,30 @@ A dumper runs on the reporter's thread, concurrently with the component it inspe
 }
 ```
 
+### Disabling and Focusing Tests
+
+These decorators chain on a leaf name before `in`:
+
+```scala
+"not written yet" .ignore in { ... }
+"reconnect after reset" .ignore("issue #42: deadlocks the pool") in { ... }
+"iterating on this one" .focus in { ... }
+"needs a database" .only(databaseAvailable) in { ... }
+```
+
+- `.ignore` registers the leaf, never runs its body, and reports it `Ignored`. `.ignore(reason)` records why; give the reason whenever a test is disabled.
+- `.focus` runs only the focused leaves; every other leaf reports `Skipped`. It is an editing aid, not something to commit.
+- `.only(cond)` runs the leaf only when `cond` is true at registration; otherwise it reports `Skipped`.
+- To keep running a known-broken body, use `.pendingUntilFixed(reason)` (see [Decorators](#decorators)).
+
 ### Platform-Conditional Tests
 
-Platform gates restrict a leaf or group to one or more platforms. On a disabled platform the body is compile-excluded (absent, not skipped):
+Platform gates restrict a leaf or group to one or more platforms. On a disabled platform the body is compile-excluded (absent, not skipped). `.jvm`, `.js`, `.native` and `.wasm` enable a platform; `.notJvm`, `.notJs`, `.notNative` and `.notWasm` disable one. Wasm counts as JS: `.js` includes Wasm and `.notJs` excludes it, while `.wasm` and `.notWasm` select Wasm alone. So `.notNative` still runs on Wasm. Chained gates intersect:
 
 ```scala
 "jvm only" .jvm in { ... }
-"not native" .notNative in { ... }
-"jvm or js" .notNative in { ... }
+"not native" .notNative in { ... }            // JVM, JS and Wasm
+"jvm or js" .notNative.notWasm in { ... }
 ```
 
 ### Decorators
@@ -1190,13 +1203,13 @@ Users can always navigate between the two tiers:
 - **`.unsafe`** on any safe instance returns the `Unsafe` counterpart
 - **`.safe`** on any `Unsafe` instance returns the safe counterpart
 
-The two tiers mirror each other — every operation available on the safe API has an `Unsafe` equivalent, and vice versa. The safe tier wraps operations in effects (`Sync`, `Abort[Closed]`, `Async`), while the `Unsafe` tier returns raw values and `Result`s, guarded by `(using AllowUnsafe)`.
+The two tiers mirror each other: every operation available on the safe API has an `Unsafe` equivalent, and vice versa. The safe tier wraps operations in effects (`Sync`, `Abort[Closed]`, `Async`), while the `Unsafe` tier returns raw values and `Result`s, guarded by `(using AllowUnsafe)`.
 
 **Structure**: For a type `T`, expect to find:
-- `T` — the safe type with effectful methods (takes `using Frame`)
-- `T.Unsafe` — the form depends on the type: `sealed abstract class` when multiple implementations are needed (e.g., open/closed states), or `opaque type` for zero-cost wrapping of a single Java/platform type (e.g., `AtomicInt.Unsafe = AtomicInteger`). Operations take `(using AllowUnsafe)` instead of `(using Frame)`
-- `T.Unsafe.init(...)` — factory in the `Unsafe` companion (takes `using AllowUnsafe`; add `Frame` only if the factory uses it, e.g., to capture creation context for `Closed`). Unsafe methods should return raw values or `Result`s, not effectful computations (`A < S`). `Frame` in unsafe code is primarily for capturing creation context, not for effect suspension
-- `T.init(...)` / `T.use(...)` / `T.initUnscoped(...)` — safe factories that delegate to `Unsafe.init` with lifecycle management (see "Factory methods" in Naming above)
+- `T`: the safe type with effectful methods (takes `using Frame`)
+- `T.Unsafe`: the form depends on the type: `sealed abstract class` when multiple implementations are needed (e.g., open/closed states), or `opaque type` for zero-cost wrapping of a single Java/platform type (e.g., `AtomicInt.Unsafe = AtomicInteger`). Operations take `(using AllowUnsafe)` instead of `(using Frame)`
+- `T.Unsafe.init(...)`: factory in the `Unsafe` companion (takes `using AllowUnsafe`; add `Frame` only if the factory uses it, e.g., to capture creation context for `Closed`). Unsafe methods should return raw values or `Result`s, not effectful computations (`A < S`). `Frame` in unsafe code is primarily for capturing creation context, not for effect suspension
+- `T.init(...)` / `T.use(...)` / `T.initUnscoped(...)`: safe factories that delegate to `Unsafe.init` with lifecycle management (see the `init` family in [Naming](#naming) and [Closeable Resource Pattern](#closeable-resource-pattern))
 
 **Safe→Unsafe bridge**: Safe methods enter the unsafe tier via `Sync.Unsafe.defer { ... }`, which provides `AllowUnsafe` implicitly. Inside, they call the `Unsafe` method and wrap `Result[Closed, A]` in `Abort.get` to convert to `Abort[Closed]` effect.
 
@@ -1204,42 +1217,42 @@ The two tiers mirror each other — every operation available on the safe API ha
 
 ### Unsafe API Conventions
 
-- **WARNING scaladoc** on every `Unsafe` class and `object Unsafe` — always the same text: "Low-level API meant for integrations, libraries, and performance-sensitive code. See AllowUnsafe for more details." Skip detailed method-level scaladocs for `Unsafe` APIs — the WARNING class-level scaladoc is sufficient. Add method-level docs only when the behavior is non-obvious or differs from the safe counterpart.
+- **WARNING scaladoc** on every `Unsafe` class and `object Unsafe`, always the same text: "Low-level API meant for integrations, libraries, and performance-sensitive code. See AllowUnsafe for more details." Skip detailed method-level scaladocs for `Unsafe` APIs; the WARNING class-level scaladoc is sufficient. Add method-level docs only when the behavior is non-obvious or differs from the safe counterpart.
 - **`(using AllowUnsafe)`** on every method that performs side effects without suspension. Pure accessors like `capacity` don't need it.
 - **`extends Serializable`** on `sealed abstract class Unsafe` for closeable types
-- **Closeable operations return `Result[Closed, A]`** — never throw on closed state
+- **Closeable operations return `Result[Closed, A]`**; never throw on closed state
 - **Factory methods** in `object Unsafe` take `(using AllowUnsafe)`. Add `Frame` only when the factory actually uses it (e.g., to capture the creation context for `Closed` errors)
 
 ### AllowUnsafe Tiers
 
-**All side effects must be suspended.** No side-effecting code should execute outside of Kyo's effect system without either an `AllowUnsafe` proof or a suspension boundary like `Sync.Unsafe`. This is a hard rule — unsuspended side effects break referential transparency.
+**All side effects must be suspended.** No side-effecting code should execute outside of Kyo's effect system without either an `AllowUnsafe` proof or a suspension boundary like `Sync.Unsafe`. This is a hard rule: unsuspended side effects break referential transparency.
 
 In order of preference:
 
-1. **Propagate the proof** — caller explicitly opts in (preferred for performance — no suspension overhead):
+1. **Propagate the proof**: the caller explicitly opts in (preferred for performance, since there is no suspension overhead):
    ```scala
    def init[A](capacity: Int)(using AllowUnsafe): Queue.Unsafe[A]
    ```
 
-2. **Suspend in Sync** — wraps the unsafe operation in an effect:
+2. **Suspend in Sync**: wraps the unsafe operation in an effect:
    ```scala
    def offer(v: A)(using Frame): Boolean < (Sync & Abort[Closed]) =
        Sync.Unsafe.defer(Abort.get(self.offer(v)))
    ```
 
-3. **Import danger** — external runtime callbacks (Netty listeners, platform interop), application boundaries (KyoApp, tests), and initialization of globally shared module-level values that need unsafe operations at class loading time (e.g., `Clock.live`, `Async.defaultConcurrency`):
+3. **Import danger**: external runtime callbacks (Netty listeners, platform interop), application boundaries (KyoApp, tests), and initialization of globally shared module-level values that need unsafe operations at class loading time (e.g., `Clock.live`, which creates its executor there):
    ```scala
    import AllowUnsafe.embrace.danger
    ```
 
-**Scope `AllowUnsafe` as narrowly as possible.** Never place `(using AllowUnsafe)` on a constructor or class-level import where it leaks to all methods — this masks accidental unsafe operations that the compiler would otherwise catch. Instead, take it only on the specific methods that need it, or scope the import to the smallest block possible:
+**Scope `AllowUnsafe` as narrowly as possible.** Never place `(using AllowUnsafe)` on a constructor or class-level import where it leaks to all methods: this masks accidental unsafe operations that the compiler would otherwise catch. Instead, take it only on the specific methods that need it, or scope the import to the smallest block possible:
 ```scala
-// Wrong — leaks AllowUnsafe to every method in the class
+// Wrong: leaks AllowUnsafe to every method in the class
 class MyConnection(...)(using AllowUnsafe):
     private val flag = AtomicBoolean.Unsafe.init()
     def send(...) = ... // compiler won't catch unsafe ops here
 
-// Right — scoped to the specific initialization
+// Right: scoped to the specific initialization
 class MyConnection(..., closed: AtomicBoolean):
     def isAlive(using AllowUnsafe): Boolean = !closed.unsafe.get()
     def send(...) = ... // compiler catches accidental unsafe ops
@@ -1247,12 +1260,12 @@ class MyConnection(..., closed: AtomicBoolean):
 
 **Prefer the safe type, access `.unsafe` when needed.** When a type has safe/unsafe tiers, hold the safe version and use `.unsafe` only in methods that already have `AllowUnsafe` in scope. This ensures the compiler enforces safety by default:
 ```scala
-// Preferred — hold safe type, access .unsafe in AllowUnsafe methods
+// Preferred: hold safe type, access .unsafe in AllowUnsafe methods
 class MyConnection(closed: AtomicBoolean):
     def isAlive(using AllowUnsafe): Boolean = !closed.unsafe.get()
     def close(using Frame): Unit < Async = closed.set(true).andThen(...)
 
-// Avoid — holding Unsafe type bypasses safety checks everywhere
+// Avoid: holding Unsafe type bypasses safety checks everywhere
 class MyConnection(closed: AtomicBoolean.Unsafe):
     def isAlive(using AllowUnsafe): Boolean = !closed.get()
 ```
@@ -1265,10 +1278,10 @@ class MyConnection(closed: AtomicBoolean.Unsafe):
 This is the mechanism behind the safe→unsafe bridge. The safe tier suspends via `Sync.Unsafe`, which provides `AllowUnsafe` implicitly, then calls the `Unsafe` method that performs the side effect directly:
 
 ```scala
-// Safe tier — suspends once, then delegates
+// Safe tier: suspends once, then delegates
 def set(v: Boolean)(using Frame): Unit < Sync = Sync.Unsafe.defer(unsafe.set(v))
 
-// Unsafe tier — performs the side effect directly, no allocation
+// Unsafe tier: performs the side effect directly, no allocation
 // The AllowUnsafe proof guarantees an outer scope has already suspended
 extension (self: Unsafe)
     inline def set(v: Boolean)(using AllowUnsafe): Unit = self.set(v)
@@ -1277,7 +1290,7 @@ extension (self: Unsafe)
 The same pattern applies to internal APIs. When a method takes `(using AllowUnsafe)`, it's declaring: "I perform side effects, but I trust my caller to have suspended." This allows multiple unsafe operations to compose without each one wrapping in its own `Sync.Unsafe`:
 
 ```scala
-// One suspension covers multiple unsafe operations — no per-operation allocation
+// One suspension covers multiple unsafe operations, with no per-operation allocation
 def release(conn: Connection)(using AllowUnsafe, Frame): Unit =
     if conn.isAlive then          // unsafe: reads atomic flag
         idleChannels.offer(conn)  // unsafe: mutates concurrent queue
@@ -1292,8 +1305,8 @@ Without `AllowUnsafe`, each of these would need its own `Sync.Unsafe` wrapper, a
 All closeable resources follow:
 
 ```scala
-// Closed carries creation context for diagnostics
-class Closed(resource: String, createdAt: Frame, details: String = "")(using Frame)
+// Closed (kyo-kernel) carries creation context for diagnostics
+final class Closed(resource: String, createdAt: Frame, details: String = "")(using Frame)
 
 // Unsafe level returns Result[Closed, A]
 def offer(v: A)(using AllowUnsafe): Result[Closed, Boolean]
@@ -1303,7 +1316,7 @@ def offer(v: A)(using Frame): Boolean < (Sync & Abort[Closed]) =
     Sync.Unsafe.defer(Abort.get(self.offer(v)))
 ```
 
-Resource factory convention — all variants delegate down to `Unsafe.init`:
+Resource factory convention: all variants delegate down to `Unsafe.init`. The close each variant registers is the type's own choice; `Channel` below registers `close` with its `Scope` and `closeDiscard` in `use`.
 
 | Method                | Lifecycle                   | Effect Set         | Delegates to                          |
 | --------------------- | --------------------------- | ------------------ | ------------------------------------- |
@@ -1315,7 +1328,7 @@ Resource factory convention — all variants delegate down to `Unsafe.init`:
 
 The delegation chain (using `Channel` as canonical example):
 ```scala
-// init delegates to initWith with identity — Scope-managed lifecycle
+// init delegates to initWith with identity: Scope-managed lifecycle
 def init[A](capacity: Int, access: Access)(using Frame): Channel[A] < (Sync & Scope) =
     initWith[A](capacity, access)(identity)
 
@@ -1328,16 +1341,16 @@ inline def initWith[A](capacity: Int, access: Access)[B, S](
         Scope.ensure(Channel.close(channel)).andThen:
             f(channel)
 
-// use: bracket semantics via Sync.ensure — no Scope in the effect set
+// use: bracket semantics via Sync.ensure, no Scope in the effect set
 inline def use[A](capacity: Int, access: Access)[B, S](
     inline f: Channel[A] => B < S
 )(using inline frame: Frame): B < (S & Sync) =
     Sync.Unsafe.defer:
         val channel = Unsafe.init[A](capacity, access)
-        Sync.ensure(Channel.close(channel)):
+        Sync.ensure(Channel.closeDiscard(channel)):
             f(channel)
 
-// initUnscoped delegates to initUnscopedWith with identity — no cleanup
+// initUnscoped delegates to initUnscopedWith with identity: no cleanup
 def initUnscoped[A](capacity: Int, access: Access)(using Frame): Channel[A] < Sync =
     initUnscopedWith[A](capacity, access)(identity)
 
@@ -1352,22 +1365,24 @@ Choose `init` (Scope-managed) by default. Use `use` when you want bracket semant
 
 ### Close Method Convention
 
-Types that offer a `close` method must provide three variants. The parameterized version is the canonical implementation; the others delegate to it:
+The close variants depend on what the resource holds when it closes.
+
+A resource whose shutdown has a drain window (in-flight requests, open connections) provides three variants. The parameterized version is the canonical implementation; the others delegate to it:
 
 ```scala
-// Canonical — takes an explicit grace period
+// Canonical: takes an explicit grace period
 def close(gracePeriod: Duration)(using Frame): Unit < Async
 
-// Default — delegates with a default grace period
+// Default: delegates with a default grace period
 def close(using Frame): Unit < Async = close(30.seconds)
 
-// Immediate — delegates with zero grace period
+// Immediate: delegates with zero grace period
 def closeNow(using Frame): Unit < Async = close(Duration.Zero)
 ```
 
-This gives callers control without forcing them to pick a timeout for the common case. `closeNow` makes the intent explicit — no ambiguity about whether a bare `close` waits or not.
+This gives callers control without forcing them to pick a timeout for the common case, and `closeNow` states that a close does not wait.
 
-For producer/consumer resources (Channel, Queue), also provide `closeAwaitEmpty` — closes the resource but waits until remaining elements are consumed before completing.
+A resource that buffers elements (`Channel`, `Queue`, `Hub`) has no grace period. Its `close` returns the elements it still held (`Maybe[Seq[A]] < Async`), and `closeDiscard` drops them and stays in `Sync`. `Channel` and `Queue` also provide `closeAwaitEmpty`, which closes to new elements and completes once the remaining ones are consumed.
 
 ### Local-Backed Service Pattern
 
@@ -1388,7 +1403,7 @@ object Clock:
     // Swap the instance for a scope
     def let[A, S](c: Clock)(f: => A < S)(using Frame): A < S = local.let(c)(f)
 
-    // Convenience — delegates through the local
+    // Convenience: delegates through the local
     def now(using Frame): Instant < Sync = ...
     def sleep(duration: Duration)(using Frame): Unit < Async = ...
 ```
@@ -1407,15 +1422,15 @@ All custom exceptions extend `KyoException`, which provides:
 - Environment-aware formatting (rich ANSI in dev, minimal in prod)
 
 ```scala
-class Closed(resource: String, createdAt: Frame, details: String = "")(using Frame)
-    extends KyoException(s"$resource created at ${createdAt.position.show} is closed.", details)
+final class Closed(resource: String, createdAt: Frame, details: String = "")(using Frame)
+    extends KyoException(render"$resource created at ${createdAt.position.show} is closed.", details)
 ```
 
 Follow this pattern for all new exception types:
-- Extend `KyoException`, not `Exception` or `RuntimeException` — `KyoException` already includes `NoStackTrace`, so you don't need to add it yourself
+- Extend `KyoException`, not `Exception` or `RuntimeException`. `KyoException` already mixes in `NoStackTrace`, so a subclass does not need to add it
 - Take `(using Frame)` to capture context
 - Use `String` for messages
-- Keep the message concise — the `Frame` provides the location context
+- Keep the message concise; the `Frame` provides the location context
 
 ---
 
@@ -1425,23 +1440,25 @@ NOTE: This section is a reference for the uncommon task of implementing a new ef
 
 ### Anatomy of an Effect
 
-1. **Type definition** — sealed trait extending one of two base classes:
-   - **`ArrowEffect[I, O]`** — for function-like effects that transform inputs to outputs. Operations are encoded as an ADT and dispatched in a handler loop. Used by `Abort`, `Var`, `Emit`, `Choice`, `Poll`.
-   - **`ContextEffect[A]`** — for value-providing effects (dependency injection). No ADT or handler loop needed — just `ContextEffect.handle(tag, value)(computation)`. Values are inherited across async boundaries by default; a binding that must not cross a fork says so through `handle`'s fork strategy, `fork = _ => Absent` (the spelling behind `Local.initNoninheritable`). Used by `Env`, `Local`.
+The kernel side of this work (handler variants, region rows, context strategies, isolates) is covered in depth by [kyo-kernel's guide](kyo-kernel/CONTRIBUTING.md#extension-recipes); the scaladoc on each `ArrowEffect` and `ContextEffect` handler states its contract.
+
+1. **Type definition**: a sealed trait extending one of two base classes:
+   - **`ArrowEffect[I, O]`**: for function-like effects that transform inputs to outputs. Operations are encoded as an ADT and answered by a handler. Used by `Abort`, `Var`, `Emit`, `Choice`, `Poll`.
+   - **`ContextEffect[A]`**: for value-providing effects (dependency injection). No ADT or handler loop is needed: `ContextEffect.handleInheritable(tag, value)(computation)` binds a value that forked computations inherit, `ContextEffect.handleNonInheritable(tag, value)(computation)` binds one that a fork does not carry, and `ContextEffect.handle` takes explicit `fork` and `join` strategies. Used by `Env` and by `Local`, whose per-local fork strategy (`Local.init(default)(forkValue)`, where `Absent` means not inherited, and `Local.initNoninheritable`) lives in the value it binds.
 
    ```scala
    sealed trait Var[V] extends ArrowEffect[Const[Op[V]], Const[V]]   // ArrowEffect
-   sealed trait Env[+R] extends ContextEffect[R]                     // ContextEffect
+   sealed trait Env[+R] extends ContextEffect[TypeMap[R]]            // ContextEffect
    ```
 
-2. **Operations as data** — encode operations as an ADT, not as methods:
+2. **Operations as data**: encode operations as an ADT, not as methods:
    ```scala
    private type Op[V] = Get.type | V | Update[V]
    private object Get
    private type Update[V] = V => V
    ```
 
-3. **Suspend** — translate domain operations into kernel inputs:
+3. **Suspend**: translate domain operations into kernel inputs:
    ```scala
    inline def get[V](...): V < Var[V] = use[V](identity)
    inline def use[V](...)(inline f: V => A < S)(...) =
@@ -1450,38 +1467,40 @@ NOTE: This section is a reference for the uncommon task of implementing a new ef
        ArrowEffect.suspend[Unit](tag, value: Op[V])
    ```
 
-4. **Handle** — choose the right kernel handler for the effect:
+4. **Handle**: choose the kernel handler by what the clause needs (kyo-kernel's "Recipe: choose and write the handler" covers the `*With` and `recover` forms):
 
-   | Handler                                 | When to use                                                       |
-   | --------------------------------------- | ----------------------------------------------------------------- |
-   | `ArrowEffect.handle`                    | Simple one-shot handling, no looping or state                     |
-   | `ArrowEffect.handleFirst`               | Handle only the first occurrence, get a continuation for the rest |
-   | `ArrowEffect.handleLoop` (no state)     | Loop through all occurrences without accumulating state           |
-   | `ArrowEffect.handleLoop` (with state)   | Loop with state threaded through each occurrence                  |
-   | `ArrowEffect.handleLoop` (state + done) | Same, plus a final transformation when computation completes      |
+   | Handler                          | When to use                                                                                  |
+   | -------------------------------- | -------------------------------------------------------------------------------------------- |
+   | `ArrowEffect.handleCont`         | The clause holds the continuation and applies it at most once, or not at all (early exit)    |
+   | `ArrowEffect.handleContRepeated` | The clause applies the continuation more than once (backtracking, non-determinism)           |
+   | `ArrowEffect.handleLoop`         | Answer each occurrence with `Loop.continue(answer)`, no state between occurrences            |
+   | `ArrowEffect.handleLoopState`    | Thread state between occurrences with `Loop.continue(nextState, answer)`                     |
 
-   Example with stateful `handleLoop`:
+   Each has an overload with a `done` clause that transforms the region's final value. `Var.runWith` threads the variable through `handleLoopState`:
    ```scala
-   ArrowEffect.handleLoop(tag, initialState, computation)(
-       [C] => (input, state, cont) =>
-           input match
-               case _: Get.type  => Loop.continue(state, cont(state))
-               case input: Update[V] =>
-                   val nst = input(state)
-                   Loop.continue(nst, cont(nst))
-               case input: V     => Loop.continue(input, cont(state)),
-       done = (state, result) => ...
+   ArrowEffect.handleLoopState(tag, state, v)(
+       [C] =>
+           (state, input) =>
+               input match
+                   case input: Get.type =>
+                       Loop.continue(state, state)
+                   case input: Update[V] @unchecked =>
+                       val nst = input(state)
+                       Loop.continue(nst, nst)
+                   case input: V @unchecked =>
+                       Loop.continue(input, state),
+       done = f
    )
    ```
 
-   Use `Effect.catching` to intercept exceptions inside effect implementations and convert them to effect errors.
+   To answer a failure of the handled body, use the overload that adds a `recover: Throwable => Maybe[B < (S & S2)]` clause. Converting exceptions from user code into effect errors is `Abort.catching`.
 
 5. **`Reducible.Eliminable` given** if the effect can be fully eliminated:
    ```scala
    given eliminateAbort: Reducible.Eliminable[Abort[Nothing]] with {}
    ```
 
-6. **`Reducible` in handler signatures** — when an effect has union types (e.g., `Abort[E | ER]`), handlers use `Reducible` to allow partial handling. The handler eliminates `E` and reduces the remaining `ER` via `reduce.SReduced`:
+6. **`Reducible` in handler signatures**: when an effect has union types (e.g., `Abort[E | ER]`), handlers use `Reducible` to allow partial handling. The handler eliminates `E` and reduces the remaining `ER` via `reduce.SReduced`:
    ```scala
    def run[E](using Frame)[A, S, ER](
        v: => A < (Abort[E | ER] & S)
@@ -1492,7 +1511,7 @@ NOTE: This section is a reference for the uncommon task of implementing a new ef
    ```
    This lets callers handle one layer of a union error type while preserving the rest in the effect stack.
 
-7. **Variants delegate to canonical** — never duplicate handler logic:
+7. **Variants delegate to canonical**; never duplicate handler logic:
    ```scala
    def run[V, A, S](state: V)(v: A < (Var[V] & S)): A < S =
        runWith(state)(v)((_, result) => result)
@@ -1502,7 +1521,7 @@ NOTE: This section is a reference for the uncommon task of implementing a new ef
 
 ### Delegation Pattern for Higher-Level Types
 
-Higher-level types delegate to lower-level ones — they don't reimplement:
+Higher-level types delegate to lower-level ones instead of reimplementing them:
 
 | Higher           | Delegates to        | Adds                                 |
 | ---------------- | ------------------- | ------------------------------------ |
@@ -1514,7 +1533,7 @@ Higher-level types delegate to lower-level ones — they don't reimplement:
 
 Build new types by composing existing ones. Create anonymous instances when composition logic varies:
 ```scala
-def pipeline[S](meters: Seq[Meter < (Sync & S)]): Meter < (Sync & S) =
+def pipeline[S](meters: Seq[Meter < (Sync & S)])(using Frame): Meter < (Sync & S) =
     Kyo.collectAll(meters).map { seq =>
         new Meter:
             def run[A, S](v: => A < S)(using Frame) = ...
@@ -1525,22 +1544,23 @@ def pipeline[S](meters: Seq[Meter < (Sync & S)]): Meter < (Sync & S) =
 
 Methods that fork computations carrying arbitrary effect state (`A < (Abort[E] & Async & S)`) into new fibers must use the three-step `Isolate` protocol to safely move effectful state across fiber boundaries. When the forked computation has a concrete type with no extra effects (e.g., `Int < Async`), no Isolate is needed because there is no effect state to transfer across the fiber boundary.
 
+A schematic of the three steps, not the code of any one method. `Async.race` takes the `Isolate` in this position and passes it to `Fiber.internal.race`, which captures once and runs each isolated computation inside its own fiber:
+
 ```scala
-def race[E, A, S](
+def forkAll[E, A, S](
     using isolate: Isolate[S, Abort[E] & Async, S]   // Isolate comes first in using clause
-)(iterable: Seq[A < (Abort[E] & Async & S)])(using Frame): A < (Abort[E] & Async & S) =
-    isolate.capture { state =>                         // 1. capture current state
-        Fiber.internal.race(
-            iterable.map(isolate.isolate(state, _))    // 2. attach state to each forked computation
-        ).map(fiber => isolate.restore(fiber.get))     // 3. restore state from the winner
+)(computations: Seq[A < (Abort[E] & Async & S)])(using Frame): A < (Abort[E] & Async & S) =
+    isolate.capture { state =>                          // 1. capture current state
+        forkEach(computations.map(isolate.isolate(state, _)))   // 2. attach state to each forked computation
+            .map(winner => isolate.restore(winner))     // 3. restore state from the completed fiber
     }
 ```
 
 Note the `using` parameter ordering: `Isolate` precedes `Frame` because it participates in type inference.
 
 Effects that carry state across fibers provide standard isolate strategies in an `object isolate` namespace in their companion:
-- **`update`** — the forked fiber gets the current state; on completion, the outer state is replaced with the forked fiber's final state
-- **`merge(f)`** — combines the outer and inner states using a merge function `f`
-- **`discard`** — the forked fiber gets the current state but its final state is thrown away
+- **`update`**: the forked fiber gets the current state; on completion, the outer state is replaced with the forked fiber's final state
+- **`merge(f)`**: combines the outer and inner states using a merge function `f`
+- **`discard`**: the forked fiber gets the current state but its final state is thrown away
 
 Example: `Var.isolate.update`, `Var.isolate.merge((a, b) => a + b)`, `Var.isolate.discard`.
